unpackaged/main/default/objects/Account/fields/Management_Company__c.field-meta.xml
<CustomField>
    <fullName>Management_Company__c</fullName>
    <label>Management Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>