unpackaged/main/default/objects/Account/fields/Master_Account__c.field-meta.xml
<CustomField>
    <fullName>Master_Account__c</fullName>
    <description>Either the Account if there is no Parent, or the Parent Account (Primarily for Sports)</description>
    <formula>BLANKVALUE( Parent.Customer_Name__c , Customer_Name__c )</formula>
    <label>Master Account</label>
    <type>Text</type>
</CustomField>