unpackaged/main/default/objects/Account/fields/Mute_Account__c.field-meta.xml
<CustomField>
    <fullName>Mute_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mute Account Alerts</label>
    <type>Checkbox</type>
</CustomField>