unpackaged/main/default/objects/Account/fields/my_ats_team__c.field-meta.xml
<CustomField>
    <fullName>my_ats_team__c</fullName>
    <description>Used on the ATS Connect &quot;My ATS Team&quot; page and the Account Detail page layout for ATS Connect Customers.</description>
    <formula>/*Sales Rep on Account*/

IF(ISBLANK(Sales_Rep__c), NULL, Sales_Rep__r.Name&amp;&quot; - &quot;&amp;Sales_Rep__r.Title__c&amp;
BR()
&amp;Sales_Rep__r.Email__c&amp;
BR()
&amp;&quot;Mobile - &quot;&amp; Sales_Rep__r.Mobile__c&amp;BR()&amp;BR())&amp;


/*Associate Sales Rep on Account*/

IF(ISBLANK(Associate_Rep__c), NULL, Associate_Rep__r.Name&amp;&quot; - &quot;&amp;Associate_Rep__r.Title__c&amp;BR()
&amp;IF(ISBLANK(Associate_Rep__r.Email__c), NULL, Associate_Rep__r.Email__c&amp;BR())
&amp;IF(ISBLANK(Associate_Rep__r.Mobile__c), NULL, &quot;Mobile - &quot;&amp;Associate_Rep__r.Mobile__c&amp;BR()&amp;BR()))&amp;


/*Primary Location and Facility Manager*/

IF(ISBLANK(Sales_Rep__c), NULL, &quot;Primary Location&quot;&amp;&quot; - &quot;&amp;Sales_Rep__r.Primary_Location__r.Name&amp;
BR()
&amp;Sales_Rep__r.Primary_Location__r.Facility_Manager__r.FirstName&amp;&quot; &quot; &amp;Sales_Rep__r.Primary_Location__r.Facility_Manager__r.LastName&amp;&quot; - &quot; &amp;Sales_Rep__r.Primary_Location__r.Facility_Manager__r.Title&amp;
BR()
&amp;Sales_Rep__r.Primary_Location__r.Facility_Manager__r.Email&amp;
BR()
&amp;Sales_Rep__r.Primary_Location__r.Address_Line_1__c&amp;
BR()
&amp;IF(ISBLANK(Sales_Rep__r.Primary_Location__r.Address_Line_2__c), NULL, Sales_Rep__r.Primary_Location__r.Address_Line_2__c&amp;BR())
&amp;Sales_Rep__r.Primary_Location__r.City__c&amp;&quot;, &quot;&amp;Sales_Rep__r.Primary_Location__r.State__c&amp;&quot; &quot;&amp;Sales_Rep__r.Primary_Location__r.Zip_Code__c&amp;
BR()
&amp;&quot;Phone - &quot;&amp;Sales_Rep__r.Primary_Location__r.Primary_Office_Num__c&amp;BR()&amp;BR())&amp;

/*Credit Rep on Account*/

IF(ISBLANK(Sales_Rep__r.Primary_Collections_Manager__c), NULL, Sales_Rep__r.Primary_Collections_Manager__r.FirstName&amp;&quot; &quot; &amp;Sales_Rep__r.Primary_Collections_Manager__r.LastName&amp;&quot; - &quot;&amp; Sales_Rep__r.Primary_Collections_Manager__r.Title&amp;
BR()
&amp;IF(ISBLANK(Sales_Rep__r.Primary_Collections_Manager__r.Email), NULL, Sales_Rep__r.Primary_Collections_Manager__r.Email&amp;BR())
&amp;IF(ISBLANK(Sales_Rep__r.Primary_Collections_Manager__r.Phone), NULL, &quot;Phone - &quot;&amp;Sales_Rep__r.Primary_Collections_Manager__r.Phone&amp;BR())&amp;BR())&amp;


&quot;Corporate Office&quot;&amp;
BR()
&amp;&quot;Advanced Turf Solutions&quot;&amp;
BR()
&amp;&quot;12955 Ford Dr.&quot;&amp;
BR()
&amp;&quot;Fishers, IN 46038&quot;&amp;
BR()
&amp;&quot;Phone - 877-433-7037&quot;&amp;

BR()&amp;
BR()&amp;

&quot;Technical Support&quot;&amp;
BR()
&amp;&quot;connect@advancedturf.com&quot;</formula>
    <label>My ATS Team</label>
    <type>Text</type>
</CustomField>