unpackaged/main/default/objects/Account/fields/My_ATS_Team_Featured_Media__c.field-meta.xml
<CustomField>
    <fullName>My_ATS_Team_Featured_Media__c</fullName>
    <defaultValue>&quot;https://www.advancedturf.com/wp-content/uploads/2017/06/lawn-landscape-turf-solutions.jpg&quot;</defaultValue>
    <description>A URL to an image that is displayed as a background on the ATS Connect &quot;My ATS Team&quot; page.</description>
    <label>My ATS Team Featured Media</label>
    <type>Url</type>
</CustomField>