unpackaged/main/default/objects/Account/fields/Next_Number_of_Storage_Agreements_Sent__c.field-meta.xml
<CustomField>
    <fullName>Next_Number_of_Storage_Agreements_Sent__c</fullName>
    <formula>Number_of_Storage_Agreements_Sent__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Number of Storage Agreements Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>