unpackaged/main/default/objects/Account/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify whether a next step has been identified to recover a Stale/Inactive Customer.</description>
    <inlineHelpText>Has a Next Step been identified to recover the Customer? Has a Task been created for the Next Step?</inlineHelpText>
    <label>Next Step?</label>
    <type>Checkbox</type>
</CustomField>