unpackaged/main/default/objects/Account/fields/No_Forecast__c.field-meta.xml
<CustomField>
    <fullName>No_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for monthly/annual forecast. We let reps put in the comments if the facility is closed. If so we run a report at the end of the month to get the values the update this field via dataloader.</description>
    <label>No Forecast</label>
    <type>Checkbox</type>
</CustomField>