unpackaged/main/default/objects/Account/fields/number_of_Ballfields__c.field-meta.xml
<CustomField>
    <fullName>number_of_Ballfields__c</fullName>
    <inlineHelpText>The # of Ballfields for an Athletic Customer</inlineHelpText>
    <label># of Ballfields</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>