unpackaged/main/default/objects/Account/fields/Number_of_Storage_Agreements_Sent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Storage_Agreements_Sent__c</fullName>
    <description>Only used for triggering Flows to Update Storage Agreement Statuses on the relevant Account and Related Contact Objects when Storage Agreements are sent via Conga</description>
    <label>Number of Storage Agreements Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>