unpackaged/main/default/objects/Account/fields/Number_of_Units_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units_Purchased__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Lifetime # of units purchased</inlineHelpText>
    <label>Number of Units Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>