unpackaged/main/default/objects/Account/fields/Open_Order_B_H__c.field-meta.xml
<CustomField>
    <fullName>Open_Order_B_H__c</fullName>
    <description>Sum of all open orders with bill and hold arrangements</description>
    <label>Open Order B/H</label>
    <summarizedField>Open_Order__c.Doc_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Open_Order__c.Bill_and_Hold__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Open_Order__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>