unpackaged/main/default/objects/Account/fields/Open_Order_EOP__c.field-meta.xml
<CustomField>
    <fullName>Open_Order_EOP__c</fullName>
    <description>Roll-Up Summary of all Early Order Open Orders</description>
    <label>Open Order EOP</label>
    <summarizedField>Open_Order__c.Doc_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Open_Order__c.Early_Order__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Open_Order__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>