unpackaged/main/default/objects/Account/fields/Open_Orders_TM__c.field-meta.xml
<CustomField>
    <fullName>Open_Orders_TM__c</fullName>
    <description>Total Open Orders with a Requested Ship Date in the Current Month (or Earlier)</description>
    <inlineHelpText>Total Open Orders with a Requested Ship Date in the Current Month (or Earlier)</inlineHelpText>
    <label>Open Orders TM</label>
    <summarizedField>Open_Order__c.Product_Only__c</summarizedField>
    <summaryFilterItems>
        <field>Open_Order__c.Req_Ship_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>1/31/2022</value>
    </summaryFilterItems>
    <summaryForeignKey>Open_Order__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>