unpackaged/main/default/objects/Account/fields/Open_Orders_Total__c.field-meta.xml
<CustomField>
    <fullName>Open_Orders_Total__c</fullName>
    <description>The total of any active Open Orders on this Account</description>
    <inlineHelpText>The total of any active Open Orders on this Account</inlineHelpText>
    <label>Open Orders $</label>
    <summarizedField>Open_Order__c.Doc_Amount__c</summarizedField>
    <summaryForeignKey>Open_Order__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>