unpackaged/main/default/objects/Account/fields/Owner_Not_Rep__c.field-meta.xml
<CustomField>
    <fullName>Owner_Not_Rep__c</fullName>
    <formula>IF(Owner.LastName !=&#39;Moore&#39; &amp;&amp;!CONTAINS(Sales_Rep__r.Name, Owner.LastName), true, false)</formula>
    <label>Owner Not Rep</label>
    <type>Checkbox</type>
</CustomField>