unpackaged/main/default/objects/Account/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <description>Indicates the Current User is the Owner of the Account</description>
    <formula>Owner.Id =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the Current User is the Owner of the Account</inlineHelpText>
    <label>Owner User?</label>
    <type>Checkbox</type>
</CustomField>