unpackaged/main/default/objects/Account/fields/Parts_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Parts_Dealer__c</fullName>
    <label>Where are you buying your ride-on parts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>