unpackaged/main/default/objects/Account/fields/Past_Due_Total__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Total__c</fullName>
    <formula>X60_and_Over_Due__c + Under_60_Due__c + Under_30_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total past due balance</inlineHelpText>
    <label>Past Due Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>