unpackaged/main/default/objects/Account/fields/Past_VGM_Number__c.field-meta.xml
<CustomField>
    <fullName>Past_VGM_Number__c</fullName>
    <label>Past VGM Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>