unpackaged/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1% NET 45 NET 60</fullName>
            </value>
            <value>
                <fullName>1.5% NET 10 NET 30</fullName>
            </value>
            <value>
                <fullName>2% 10 NET 30</fullName>
            </value>
            <value>
                <fullName>2% 7 NET 30</fullName>
            </value>
            <value>
                <fullName>COD/Cash</fullName>
            </value>
            <value>
                <fullName>COD/CC</fullName>
            </value>
            <value>
                <fullName>COD/CK</fullName>
            </value>
            <value>
                <fullName>Due on Receipt</fullName>
            </value>
            <value>
                <fullName>Due Upon Ordering</fullName>
            </value>
            <value>
                <fullName>NET 10</fullName>
            </value>
            <value>
                <fullName>NET 15</fullName>
            </value>
            <value>
                <fullName>NET 180</fullName>
            </value>
            <value>
                <fullName>NET 30</fullName>
            </value>
            <value>
                <fullName>NET 45</fullName>
            </value>
            <value>
                <fullName>NET 60</fullName>
            </value>
            <value>
                <fullName>NET 75</fullName>
            </value>
            <value>
                <fullName>NET 90</fullName>
            </value>
            <value>
                <fullName>SET DUE DATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>