unpackaged/main/default/objects/Account/fields/Percent_Change_2_Year__c.field-meta.xml
<CustomField>
    <fullName>Percent_Change_2_Year__c</fullName>
    <formula>(Total_Sales_Two_Years_Ago__c - Total_Sales_3_Years_Ago__c)/Total_Sales_3_Years_Ago__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percent change over prev. 2 years</inlineHelpText>
    <label>Percent Change 2 Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>