unpackaged/main/default/objects/Account/fields/Pest_License_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Pest_License_Exp_Date__c</fullName>
    <inlineHelpText>Expiration Date of Pesticide License</inlineHelpText>
    <label>Pest. License Exp Date</label>
    <type>Date</type>
</CustomField>