unpackaged/main/default/objects/Account/fields/Pesticide_Copy_on_File__c.field-meta.xml
<CustomField>
    <fullName>Pesticide_Copy_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if we have a Pesticide Copy on File</description>
    <inlineHelpText>Do we have a Pesticide Copy on File for this Account?</inlineHelpText>
    <label>Pesticide Copy on File</label>
    <type>Checkbox</type>
</CustomField>