unpackaged/main/default/objects/Account/fields/Pesticide_License__c.field-meta.xml
<CustomField>
    <fullName>Pesticide_License__c</fullName>
    <label>Pesticide License #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>