unpackaged/main/default/objects/Account/fields/Possible_Write_off__c.field-meta.xml
<CustomField>
    <fullName>Possible_Write_off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Collections-field to indicate a possible write-off of balance</description>
    <label>Possible Write-off?</label>
    <type>Checkbox</type>
</CustomField>