unpackaged/main/default/objects/Account/fields/Power_of_1__c.field-meta.xml
<CustomField>
    <fullName>Power_of_1__c</fullName>
    <description>Power of 1 formula - needed to be able to count unique Accounts on Reports</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power of 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>