unpackaged/main/default/objects/Account/fields/Prev_FY_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Prev_FY_Forecast__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Previous Year Primary Rep Account Forecast</inlineHelpText>
    <label>Prev FY Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>