unpackaged/main/default/objects/Account/fields/Previous_Rep__c.field-meta.xml
<CustomField>
    <fullName>Previous_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Rep</label>
    <referenceTo>Sales_Rep__c</referenceTo>
    <relationshipLabel>Former Accounts</relationshipLabel>
    <relationshipName>Former_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>