unpackaged/main/default/objects/Account/fields/Primary_Mailing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mailing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary contact for marketing mailings (to have additional contacts receive Marketing materials please update the Contact)</description>
    <inlineHelpText>The primary contact for marketing mailings (to have additional contacts receive Marketing materials please update the Contact)</inlineHelpText>
    <label>Primary Mailing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>