unpackaged/main/default/objects/Account/fields/Primary_Mailing_Person__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mailing_Person__c</fullName>
    <inlineHelpText>Primary Mailing Contact for Account 
(Not synced to GP/Salespad)</inlineHelpText>
    <label>Primary Mailing Person</label>
    <length>64</length>
    <type>Text</type>
</CustomField>