unpackaged/main/default/objects/Account/fields/Primary_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mailing_Street__c</fullName>
    <formula>IF(LEN(Primary_Mailing_Contact__r.MailingStreet) &gt; 0,Primary_Mailing_Contact__r.MailingStreet&amp; br()&amp;Primary_Mailing_Contact__r.MailingCity&amp;&quot;, &quot;&amp; Primary_Mailing_Contact__r.MailingState&amp;&quot; &quot;&amp; Primary_Mailing_Contact__r.MailingPostalCode, BillingStreet&amp; br()&amp; BillingCity&amp;&quot;, &quot;&amp; BillingState&amp;&quot; &quot;&amp; BillingPostalCode)</formula>
    <inlineHelpText>This will be the Primary Billing Street, unless a different Mailing Contact has been selected as the Primary for this Account</inlineHelpText>
    <label>Primary Mailing Street</label>
    <type>Text</type>
</CustomField>