unpackaged/main/default/objects/Account/fields/Purchased_Steel_Green_Unit__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Steel_Green_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if customer purchased a Steel Green Unit in the past. Process Builder will control new sales</description>
    <label>Purchased Steel Green Unit?</label>
    <type>Checkbox</type>
</CustomField>