unpackaged/main/default/objects/Account/fields/Purchases_Before_SG_Unit__c.field-meta.xml
<CustomField>
    <fullName>Purchases_Before_SG_Unit__c</fullName>
    <description>Contains value of purchases prior to the date of a SGM. If they sold them anything on the date of the unit purchase other than the unit it will not show here. It is maintained by exporting a copy of Purchases Before SGM report and a copy of all accounts that have Purchased a Steel Green Unit? = true. Then run this script https://github.com/ahephner/pythonUdemy/blob/master/Python%20basics/produced_docs/sgm_before_purchase.py</description>
    <inlineHelpText>Summary of total purchases prior to Steel Green Unit</inlineHelpText>
    <label>Purchases Before SG Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>