unpackaged/main/default/objects/Account/fields/Quip_Folder_Address__c.field-meta.xml
<CustomField>
    <fullName>Quip_Folder_Address__c</fullName>
    <description>Is set by flow from the opportunity when a opp gets to quote</description>
    <label>Quip Folder Address</label>
    <type>Url</type>
</CustomField>