unpackaged/main/default/objects/Account/fields/R_Score__c.field-meta.xml
<CustomField>
    <fullName>R_Score__c</fullName>
    <description>Sigstr Relationships Score</description>
    <inlineHelpText>Sigstr Relationships Score</inlineHelpText>
    <label>R Score</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>