unpackaged/main/default/objects/Account/fields/Real_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Real_Account_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Real Account ID</label>
    <type>Text</type>
</CustomField>