unpackaged/main/default/objects/Account/fields/Remaining_Invoice_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Invoice_Amount_Total__c</fullName>
    <description>Total amount due of all unpaid/scheduled payment invoices</description>
    <inlineHelpText>Total amount due of all unpaid/scheduled payment invoices</inlineHelpText>
    <label>Remaining Invoice Amount Total</label>
    <summarizedField>Sales_Document__c.Current_Open_Amount__c</summarizedField>
    <summaryForeignKey>Sales_Document__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>