unpackaged/main/default/objects/Account/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder</label>
    <type>Checkbox</type>
</CustomField>