unpackaged/main/default/objects/Account/fields/Rep_Num_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Num_Name__c</fullName>
    <formula>Sales_Rep__r.Sales_Rep_Name_and_Num__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep #/Name</label>
    <type>Text</type>
</CustomField>