unpackaged/main/default/objects/Account/fields/Requires_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Requires_PO_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires PO Number</label>
    <type>Checkbox</type>
</CustomField>