unpackaged/main/default/objects/Account/fields/Ride_On_Brands__c.field-meta.xml
<CustomField>
    <fullName>Ride_On_Brands__c</fullName>
    <description>Different Ride on Brands used by the Account</description>
    <inlineHelpText>Which Ride On Brands do they use?</inlineHelpText>
    <label>Ride On Brands</label>
    <length>255</length>
    <type>Text</type>
</CustomField>