unpackaged/main/default/objects/Account/fields/Ride_On_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Ride_On_Quantity__c</fullName>
    <description>Number of Ride On Units for the Account</description>
    <inlineHelpText>How many Ride On Units do they have?</inlineHelpText>
    <label>Ride On Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>