unpackaged/main/default/objects/Account/fields/S_Account__c.field-meta.xml
<CustomField>
    <fullName>S_Account__c</fullName>
    <formula>IF( CONTAINS(Customer__c, &#39;S&#39; ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S-Account?</label>
    <type>Checkbox</type>
</CustomField>