unpackaged/main/default/objects/Account/fields/Sales_Goal_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Sales_Goal_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allow us to access sales goal info</description>
    <label>Sales Goal Lookup</label>
    <referenceTo>Sales_Goal__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>