unpackaged/main/default/objects/Account/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Sales Rep responsible for this Customer Account</description>
    <label>Sales Rep</label>
    <referenceTo>Sales_Rep__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>