unpackaged/main/default/objects/Account/fields/Sales_Rep_Active__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Active__c</fullName>
    <description>Tell if the current sales rep is active</description>
    <formula>Sales_Rep__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Active?</label>
    <type>Checkbox</type>
</CustomField>