unpackaged/main/default/objects/Account/fields/Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Email__c</fullName>
    <description>The Email Address of the Primary Sales Rep for this Account (used by Conga Sign)</description>
    <formula>Sales_Rep__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Email</label>
    <type>Text</type>
</CustomField>