unpackaged/main/default/objects/Account/fields/Sales_Rep_FM_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_FM_Email__c</fullName>
    <description>Updated by workflow to always match the Sales Rep Facility Manager&#39;s Email Address (if they have a license and we know it)</description>
    <label>Sales Rep FM Email</label>
    <type>Email</type>
</CustomField>