unpackaged/main/default/objects/Account/fields/Sales_Rep_Golf__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Golf__c</fullName>
    <formula>TEXT(Sales_Rep__r.Primary_Market__c) = &quot;Golf&quot;</formula>
    <inlineHelpText>Will be checked if the rep for this customer has a Target Market of Golf</inlineHelpText>
    <label>Sales Rep Golf?</label>
    <type>Checkbox</type>
</CustomField>