unpackaged/main/default/objects/Account/fields/Sales_Rep_Location__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Location__c</fullName>
    <formula>Sales_Rep__r.Location_Name__c</formula>
    <label>Sales Rep Location</label>
    <type>Text</type>
</CustomField>