unpackaged/main/default/objects/Account/fields/Sales_Rep_Market_s__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Market_s__c</fullName>
    <formula>TEXT(Sales_Rep__r.Primary_Market__c)</formula>
    <inlineHelpText>The Primary Target Market of this Account&#39;s Sales Rep</inlineHelpText>
    <label>Sales Rep Market(s)</label>
    <type>Text</type>
</CustomField>