unpackaged/main/default/objects/Account/fields/Sales_Rep_Num__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Num__c</fullName>
    <formula>Sales_Rep__r.Sales_Rep_Num__c</formula>
    <label>Sales Rep #</label>
    <type>Text</type>
</CustomField>