unpackaged/main/default/objects/Account/fields/Sales_Rep_Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for updating the Account and sending Credit Applications &amp; EOP Storage Agreements using a flow</description>
    <label>Sales Rep Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>