unpackaged/main/default/objects/Account/fields/Sales_Rep_Sports__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Sports__c</fullName>
    <formula>TEXT(Sales_Rep__r.Primary_Market__c) = &quot;Sports Fields&quot;</formula>
    <inlineHelpText>Will be checked if the Sales Rep for this Account has a Target Market including Sports Fields</inlineHelpText>
    <label>Sales Rep Sports?</label>
    <type>Checkbox</type>
</CustomField>