unpackaged/main/default/objects/Account/fields/Sales_Rep_T_O__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_T_O__c</fullName>
    <formula>TEXT(Sales_Rep__r.Primary_Market__c) = &quot;Turf and Ornamental&quot;</formula>
    <inlineHelpText>Will be checked if the Sales Rep for this Account has Turf &amp; Ornamental as a Target Market</inlineHelpText>
    <label>Sales Rep T&amp;O?</label>
    <type>Checkbox</type>
</CustomField>