unpackaged/main/default/objects/Account/fields/Sales_Rep_Year__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Year__c</fullName>
    <formula>IF(TEXT(Sales_Rep__r.Fiscal_Year__c) = &quot;Calendar&quot;, 2, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>