unpackaged/main/default/objects/Account/fields/Sales_TM__c.field-meta.xml
<CustomField>
    <fullName>Sales_TM__c</fullName>
    <inlineHelpText>Note does not account for rep just total sales to account for current month</inlineHelpText>
    <label>Sales TM</label>
    <summarizedField>Sales_Document__c.Product_Sub_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Document__c.Doc_Month__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Document__c.Doc_Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Document__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>