unpackaged/main/default/objects/Account/fields/SGM_Closed_Opp_Total__c.field-meta.xml
<CustomField>
    <fullName>SGM_Closed_Opp_Total__c</fullName>
    <description>Steel Green Manufacturing - All Time Total of &quot;Closed Won&quot; Opportunities</description>
    <inlineHelpText>All Time Total of &quot;Closed Won&quot; Opportunities</inlineHelpText>
    <label>SGM Closed Opp $</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Equipment Demo, SGM Machine</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>