unpackaged/main/default/objects/Account/fields/SGM_Last_Win__c.field-meta.xml
<CustomField>
    <fullName>SGM_Last_Win__c</fullName>
    <description>Steel Green Manufacturing - Last Close Date of a &quot;Closed Won&quot; Opportunity</description>
    <inlineHelpText>Last Close Date of a &quot;Closed Won&quot; Opportunity</inlineHelpText>
    <label>SGM Last Win</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Equipment Demo, SGM Machine</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>