unpackaged/main/default/objects/Account/fields/SGM_of_Machines__c.field-meta.xml
<CustomField>
    <fullName>SGM_of_Machines__c</fullName>
    <description>Steel Green Manufacturing - # of Machines Ordered (Sum of Closed Won Machine Opportunities)</description>
    <inlineHelpText>Steel Green Manufacturing - # of Machines Ordered (Sum of Closed Won Machine Opportunities)</inlineHelpText>
    <label>SGM # of Machines</label>
    <summarizedField>Opportunity.SGM_Quantity__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>