unpackaged/main/default/objects/Account/fields/SGM_Open_Opp_Value__c.field-meta.xml
<CustomField>
    <fullName>SGM_Open_Opp_Value__c</fullName>
    <description>Steel Green Manufacturing - All Open Opportunities Total Value</description>
    <inlineHelpText>All Open Opportunities Total Value</inlineHelpText>
    <label>SGM Open Opp $</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Equipment Demo, SGM Machine</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>