unpackaged/main/default/objects/Account/fields/Shared_Comp_Plan__c.field-meta.xml
<CustomField>
    <fullName>Shared_Comp_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the Previous Rep and Current Rep are on a Shared Comp Plan</inlineHelpText>
    <label>Shared Comp Plan?</label>
    <type>Checkbox</type>
</CustomField>