unpackaged/main/default/objects/Account/fields/Shared_Comp_Term_Date__c.field-meta.xml
<CustomField>
    <fullName>Shared_Comp_Term_Date__c</fullName>
    <description>If sharing compensation, the date when this shared compensation Terminates</description>
    <inlineHelpText>If sharing compensation, the date when this shared compensation Terminates</inlineHelpText>
    <label>Shared Comp Term Date</label>
    <type>Date</type>
</CustomField>