unpackaged/main/default/objects/Account/fields/Ship_Method__c.field-meta.xml
<CustomField>
    <fullName>Ship_Method__c</fullName>
    <label>Ship Method</label>
    <length>8</length>
    <type>Text</type>
</CustomField>