unpackaged/main/default/objects/Account/fields/SIGSTR__R_Score__c.field-meta.xml
<CustomField>
    <fullName>SIGSTR__R_Score__c</fullName>
    <label>R Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>