unpackaged/main/default/objects/Account/fields/SIGSTR__SigstrSync__c.field-meta.xml
<CustomField>
    <fullName>SIGSTR__SigstrSync__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SigstrSync</label>
    <type>Checkbox</type>
</CustomField>